fixed alignment of title and subheading

--- a/chantelleperreau/src/App.css
+++ b/chantelleperreau/src/App.css
@@ -511,12 +511,12 @@ ul {
   .mainTitle{
     font-size: 2.7rem;
     top: 2px;
-    left: 25px;
+    left: 28px;
     margin-bottom: 0;
   }
   .subheading{
     font-size: 1.4rem;
-    left:70px;
+    left:75px;
     margin-top: -10px;
   }
 
